# opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: arm.h  face.h  loadobject.h  object.h  scene.h  utils.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.c  main.cpp  shader.fs  shader.vs
